--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@types/express": "^4.17.21",
     "aws-sdk": "^2.1559.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.4",
     "express": "^4.18.2",
+    "fs-extra": "^11.2.0",
     "redis": "^4.6.13",
     "simple-git": "^3.22.0"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.17"
+    "@types/cors": "^2.8.17",
+    "@types/fs-extra": "^11.0.4"
   }
 }
